--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,10 +11,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: oswald, sans-serif ;
 }
-html, body{
-    overflow: hidden;
+body{
+    scroll-snap-type: y mandatory;
+    height: 100vh;
+    overflow-x: hidden;
+}
+html{
+    scroll-snap-type:y mandatory;
+}
+section{
+    scroll-snap-align: start;
 }
 
 .logo img {
@@ -63,9 +71,6 @@ html, body{
 }
 .about-dropmenu::-webkit-scrollbar{
     width: 10px;
-}
-.blockchain, .blockchain span{
-    font-family: oswald, sans-serif ;
 }
 .firstImageBack, .secondImageBack{
     background: linear-gradient(100deg, #0404dd94 0%, rgba(9, 9, 121, 0.199) 75%, #0404dd94 100%);
