--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,8 @@ section{
     margin-bottom: 0.4rem;
     font-size: 0.8rem;
     position: relative;
+    list-style: none;
+    cursor: pointer;
 }
 
 .about-dropmenu li::after,
